# tesspdf

./: CMakeLists.txt  README.md  djvutesssource.cpp  djvutesssource.h  imagefiletesssource.cpp  imagefiletesssource.h  main.cpp  mainwindow.cpp  mainwindow.ui  ocr.cpp  ocr.h  pdftesssource.cpp  pdftesssource.h  tesssource.cpp  tesssource.h  tesssourcefactory.h
